# hdg-primal

./: .gitignore  CMakeLists.txt  README.md  exvec.F  primal-hdg-dc-monodomain.F  primal-hdg-dc-monomial.F  primal-hdg-dc-parabolic.F  primal-hdg-dc.F  primal-hdg-dc.f  tt2006.F
scripts/: lagrange_high_order.py  plot_pkqk.py  plot_spmat.py  sparse_spy.py
src/: cellmodel.F  cellmodel.F90  exksp.F90  exvec.F90  fhn.F  ms.F  primal-hdg-cm-monodomain-cells.F90  primal-hdg-cm-parabolic.F90  primal-hdg-cm.F  primal-hdg-cm.F90  primal-hdg-dc-monodomain-cells.F  primal-hdg-dc-monodomain-cells.F90  primal-hdg-dc-monodomain.F  primal-hdg-dc-monodomain.F90  primal-hdg-dc-monomial.F90  primal-hdg-dc-parabolic.F  primal-hdg-dc-parabolic.F90  primal-hdg-dc.F  primal-hdg-dc.F90  teste.F90  teste_dmplex_box.F90  teste_dmplex_cell_list.F90  tt2006.F  tt2006.F90  tt3.F90
